Fix spacing

--- a/src/resources/postcss/views/month/_day.pcss
+++ b/src/resources/postcss/views/month/_day.pcss
@@ -37,7 +37,7 @@
 			@mixin desktop-heading-4;
 		}
 
-		padding: var(--spacer-1);
+		padding: var(--spacer-1) var(--spacer-2);
 	}
 
 	.tribe-events-calendar-month__day-date-link {
